adicinando algumas verificações